stats api documented
